--- a/TD9_TD10_Mastercamp.ipynb
+++ b/TD9_TD10_Mastercamp.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "4c53bbd5-600b-4210-ae1b-20d99fdd5a15",
-   "metadata": {},
-   "source": [
-    "##Projet de Mastercamp"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "a031962e",
    "metadata": {},
    "outputs": [],
@@ -21,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "a5d92cbf",
    "metadata": {},
    "outputs": [
@@ -29,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\q5685\\AppData\\Local\\Temp\\ipykernel_584\\3540214829.py:1: DtypeWarning: Columns (14,18,23,24,26,28,29,31,32,33,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\dany7\\AppData\\Local\\Temp\\ipykernel_31380\\3540214829.py:1: DtypeWarning: Columns (14,18,23,24,26,28,29,31,32,33,41) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  valeur = pd.read_csv(r\"valeursfoncieres-2023.txt\", delimiter=\"|\")\n"
      ]
     }
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "27c2ba5a",
    "metadata": {},
    "outputs": [
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "89119882",
    "metadata": {},
    "outputs": [
@@ -207,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "id": "73cc63d8",
    "metadata": {},
    "outputs": [
@@ -294,15 +286,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9712145d",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "valeur_in_cleaning.fillna(0, inplace=True)\n",
-    "\n",
-    "valeur_in_cleaning.to_numeric()"
-   ]
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'to_numeric'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_31380\\2780299983.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mvaleur_in_cleaning\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mvaleur_in_cleaning\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\dany7\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6295\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6296\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6297\u001b[0m         ):\n\u001b[0;32m   6298\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6299\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'to_numeric'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "id": "df59bcff",
    "metadata": {},
    "outputs": [
@@ -335,37 +336,7 @@
       "- Surface Carrez du 4eme lot\n",
       "- 5eme lot\n",
       "- Surface Carrez du 5eme lot\n",
-      "- Nature culture speciale\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3727005 entries, 0 to 3727004\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column                     Dtype  \n",
-      "---  ------                     -----  \n",
-      " 0   No disposition             int64  \n",
-      " 1   Date mutation              object \n",
-      " 2   Nature mutation            object \n",
-      " 3   Valeur fonciere            object \n",
-      " 4   No voie                    float64\n",
-      " 5   Type de voie               object \n",
-      " 6   Code voie                  object \n",
-      " 7   Voie                       object \n",
-      " 8   Code postal                float64\n",
-      " 9   Commune                    object \n",
-      " 10  Code departement           object \n",
-      " 11  Code commune               int64  \n",
-      " 12  Section                    object \n",
-      " 13  No plan                    int64  \n",
-      " 14  1er lot                    object \n",
-      " 15  Nombre de lots             int64  \n",
-      " 16  Code type local            float64\n",
-      " 17  Type local                 object \n",
-      " 18  Surface reelle bati        float64\n",
-      " 19  Nombre pieces principales  float64\n",
-      " 20  Nature culture             object \n",
-      " 21  Surface terrain            float64\n",
-      "dtypes: float64(6), int64(4), object(12)\n",
-      "memory usage: 625.6+ MB\n",
-      "None\n"
+      "- Nature culture speciale\n"
      ]
     }
    ],
@@ -375,7 +346,8 @@
     "for i in insignificante_column:\n",
     "    print(f\"- {i}\")\n",
     "\n",
-    "print(valeur_in_cleaning.drop(labels=insignificante_column, axis=1).info())"
+    "valeur_in_cleaning.drop(labels=insignificante_column, axis=1, inplace=True) # étant donner que nous suprimons reelement des collon du au inplace\n",
+    "# en cas d'erreur, recherger les instruction précédente "
    ]
   },
   {
@@ -388,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "id": "95fda334",
    "metadata": {},
    "outputs": [
@@ -398,42 +370,29 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 3727005 entries, 0 to 3727004\n",
-      "Data columns (total 31 columns):\n",
-      " #   Column                      Dtype  \n",
-      "---  ------                      -----  \n",
-      " 0   Date mutation               object \n",
-      " 1   Nature mutation             object \n",
-      " 2   Valeur fonciere             object \n",
-      " 3   B/T/Q                       object \n",
-      " 4   Type de voie                object \n",
-      " 5   Code voie                   object \n",
-      " 6   Code postal                 float64\n",
-      " 7   Commune                     object \n",
-      " 8   Code departement            object \n",
-      " 9   Code commune                int64  \n",
-      " 10  Prefixe de section          float64\n",
-      " 11  Section                     object \n",
-      " 12  No Volume                   object \n",
-      " 13  1er lot                     object \n",
-      " 14  Surface Carrez du 1er lot   object \n",
-      " 15  2eme lot                    object \n",
-      " 16  Surface Carrez du 2eme lot  object \n",
-      " 17  3eme lot                    object \n",
-      " 18  Surface Carrez du 3eme lot  object \n",
-      " 19  4eme lot                    float64\n",
-      " 20  Surface Carrez du 4eme lot  object \n",
-      " 21  5eme lot                    object \n",
-      " 22  Surface Carrez du 5eme lot  object \n",
-      " 23  Nombre de lots              int64  \n",
-      " 24  Code type local             float64\n",
-      " 25  Type local                  object \n",
-      " 26  Surface reelle bati         float64\n",
-      " 27  Nombre pieces principales   float64\n",
-      " 28  Nature culture              object \n",
-      " 29  Nature culture speciale     object \n",
-      " 30  Surface terrain             float64\n",
-      "dtypes: float64(7), int64(2), object(22)\n",
-      "memory usage: 881.5+ MB\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                     Dtype  \n",
+      "---  ------                     -----  \n",
+      " 0   Date mutation              object \n",
+      " 1   Nature mutation            object \n",
+      " 2   Valeur fonciere            object \n",
+      " 3   Type de voie               object \n",
+      " 4   Code voie                  object \n",
+      " 5   Code postal                float64\n",
+      " 6   Commune                    object \n",
+      " 7   Code departement           object \n",
+      " 8   Code commune               int64  \n",
+      " 9   Section                    object \n",
+      " 10  1er lot                    object \n",
+      " 11  Nombre de lots             int64  \n",
+      " 12  Code type local            float64\n",
+      " 13  Type local                 object \n",
+      " 14  Surface reelle bati        float64\n",
+      " 15  Nombre pieces principales  float64\n",
+      " 16  Nature culture             object \n",
+      " 17  Surface terrain            float64\n",
+      "dtypes: float64(5), int64(2), object(11)\n",
+      "memory usage: 511.8+ MB\n",
       "None\n"
      ]
     }
@@ -510,6 +469,60 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "04bb1d61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3727005 entries, 0 to 3727004\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                     Dtype  \n",
+      "---  ------                     -----  \n",
+      " 0   No disposition             float64\n",
+      " 1   Date mutation              object \n",
+      " 2   Nature mutation            object \n",
+      " 3   Valeur fonciere            float64\n",
+      " 4   No voie                    float64\n",
+      " 5   Type de voie               object \n",
+      " 6   Code voie                  float64\n",
+      " 7   Voie                       object \n",
+      " 8   Code postal                float64\n",
+      " 9   Commune                    object \n",
+      " 10  Code departement           object \n",
+      " 11  Code commune               float64\n",
+      " 12  Section                    object \n",
+      " 13  No plan                    float64\n",
+      " 14  1er lot                    object \n",
+      " 15  Nombre de lots             float64\n",
+      " 16  Code type local            float64\n",
+      " 17  Type local                 object \n",
+      " 18  Surface reelle bati        float64\n",
+      " 19  Nombre pieces principales  float64\n",
+      " 20  Nature culture             object \n",
+      " 21  Surface terrain            float64\n",
+      "dtypes: float64(12), object(10)\n",
+      "memory usage: 625.6+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "a_convertir=['No disposition','Valeur fonciere','Code voie','Code postal','No plan','Nombre de lots','Code type local','Surface reelle bati','Nombre pieces principales','Surface terrain','Code commune']\n",
+    "\n",
+    "valeur_in_cleaning[a_convertir] = valeur_in_cleaning[a_convertir].replace(',', '.', regex=True, )\n",
+    "valeur_in_cleaning[a_convertir] = pd.to_numeric(list(valeur_in_cleaning[a_convertir]), errors='coerce')\n",
+    "valeur_in_cleaning[a_convertir] = valeur_in_cleaning[a_convertir].astype(float) # changer le astype(int) si vous volez changer les chifre en int, n'oublier pas de recherger a nouveau tout le document\n",
+    "\n",
+    "print(valeur_in_cleaning.info())\n"
+   ]
   }
  ],
  "metadata": {
@@ -528,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
